[package]
name = "AdventOfCode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
reqwest_cookie_store = "0.4.0"
scraper = "0.13.0"
rpassword = "7.2"
